--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -225,8 +225,16 @@ endif
 
 ifdef CONFIG_BT
 	obj-$(CONFIG_MACH_MONARUDO) += board-monarudo-rfkill.o  htc_bdaddress.o
+	obj-$(CONFIG_MACH_DELUXE_J) += board-deluxe_j-rfkill.o  htc_bdaddress.o
+	obj-$(CONFIG_MACH_DELUXE_UB1) += board-deluxe_ub1-rfkill.o  htc_bdaddress.o
+	obj-$(CONFIG_MACH_DELUXE_U) += board-deluxe_u-rfkill.o  htc_bdaddress.o
 	obj-$(CONFIG_MACH_IMPRESSION_J) += board-impression_j-rfkill.o  htc_bdaddress.o
 	obj-$(CONFIG_MACH_M7_UL) += board-m7-rfkill.o  htc_bdaddress.o htc_4335_wl_reg.o
+	obj-$(CONFIG_MACH_M7_WLS) += board-m7wl-rfkill.o  htc_bdaddress.o htc_4335_wl_reg.o
+	obj-$(CONFIG_MACH_M7_WLV) += board-m7wl-rfkill.o  htc_bdaddress.o htc_4335_wl_reg.o
+	obj-$(CONFIG_MACH_M7_WLJ) += board-m7wl-rfkill.o  htc_bdaddress.o htc_4335_wl_reg.o
+	obj-$(CONFIG_MACH_M7_DCG) += htc_bdaddress.o
+	obj-$(CONFIG_MACH_M7_DUG) += htc_bdaddress.o
 endif
 
 #ifdef CONFIG_MSM_CAMERA_V4L2
@@ -342,13 +350,30 @@ board-deluxe_j-all-objs += board-deluxe_j-display.o board-deluxe_j-gpu.o
 board-deluxe_ub1-all-objs += board-deluxe_ub1-display.o board-deluxe_ub1-gpu.o
 board-impression_j-all-objs += board-impression_j-display.o board-impression_j-gpu.o
 board-m7-all-objs += board-m7-display.o board-m7-gpu.o
+board-m7wls-all-objs += board-m7wl-display.o board-m7wl-gpu.o
+board-m7wlv-all-objs += board-m7wl-display.o board-m7wl-gpu.o
+board-m7wlj-all-objs += board-m7wl-display.o board-m7wl-gpu.o
+board-m7dcg-all-objs += board-m7china-display.o board-m7china-gpu.o
+board-m7dug-all-objs += board-m7china-display.o board-m7china-gpu.o
 board-operaul-all-objs += board-operaul-display.o board-operaul-gpu.o
+board-k2_cl-all-objs += board-k2-display.o board-k2-gpu.o
+board-k2_plc_cl-all-objs += board-k2-display.o board-k2-gpu.o
+board-k2_u-all-objs += board-k2-display.o board-k2-gpu.o
+board-k2_ul-all-objs += board-k2-display.o board-k2-gpu.o
 endif
 
 ifdef CONFIG_MSM_CAMERA
 board-monarudo-all-objs += board-monarudo-camera.o
+board-deluxe_j-all-objs += board-deluxe_j-camera.o
+board-deluxe_ub1-all-objs += board-deluxe_ub1-camera.o
+board-deluxe_u-all-objs += board-deluxe_u-camera.o
 board-impression_j-all-objs += board-impression_j-camera.o
 board-m7-all-objs += board-m7-camera.o
+board-m7wls-all-objs += board-m7wl-camera.o
+board-m7wlv-all-objs += board-m7wlv-camera.o
+board-m7wlj-all-objs += board-m7wlj-camera.o
+board-m7dcg-all-objs += board-m7china-camera.o
+board-m7dug-all-objs += board-m7china-camera.o
 endif
 obj-$(CONFIG_MACH_MSM8960_SIM) += board-8960-all.o board-8960-regulator.o
 obj-$(CONFIG_MACH_MSM8960_RUMI3) += board-8960-all.o board-8960-regulator.o
@@ -372,10 +397,23 @@ obj-$(CONFIG_MACH_DELUXE_UB1) += board-deluxe_ub1-all.o board-deluxe_ub1-regulat
 obj-$(CONFIG_MACH_DELUXE_U) += board-deluxe_u-all.o board-deluxe_u-regulator.o
 obj-$(CONFIG_MACH_IMPRESSION_J) += board-impression_j-all.o board-impression_j-regulator.o
 obj-$(CONFIG_MACH_M7_UL) += board-m7-all.o board-m7-regulator.o
+obj-$(CONFIG_MACH_M7_WLS) += board-m7wls-all.o board-m7wl-regulator.o
+obj-$(CONFIG_MACH_M7_WLV) += board-m7wlv-all.o board-m7wl-regulator.o
+obj-$(CONFIG_MACH_M7_WLJ) += board-m7wlj-all.o board-m7wlj-regulator.o
+obj-$(CONFIG_MACH_M7_DCG) += board-m7dcg-all.o board-m7china-regulator.o
+obj-$(CONFIG_MACH_M7_DUG) += board-m7dug-all.o board-m7china-regulator.o
 
 obj-$(CONFIG_MACH_MONARUDO) += htc_util.o
+obj-$(CONFIG_MACH_DELUXE_J) += htc_util.o
+obj-$(CONFIG_MACH_DELUXE_UB1) += htc_util.o
+obj-$(CONFIG_MACH_DELUXE_U) += htc_util.o
 obj-$(CONFIG_MACH_IMPRESSION_J) += htc_util.o
 obj-$(CONFIG_MACH_M7_UL) += htc_util.o
+obj-$(CONFIG_MACH_M7_WLS) += htc_util.o
+obj-$(CONFIG_MACH_M7_WLV) += htc_util.o
+obj-$(CONFIG_MACH_M7_WLJ) += htc_util.o
+obj-$(CONFIG_MACH_M7_DCG) += htc_util.o
+obj-$(CONFIG_MACH_M7_DUG) += htc_util.o
 obj-$(CONFIG_MACH_ELITE) += board-elite.o board-elite-regulator.o board-elite-gpiomux.o board-elite-storage.o board-elite-audio.o board-elite-camera.o
 obj-$(CONFIG_MACH_ELITE) += board-elite-keypad.o
 obj-$(CONFIG_MACH_ELITE) += htc_bdaddress.o
@@ -408,6 +446,37 @@ obj-$(CONFIG_MACH_VALENTE_WX_C9) += board-valente_wx_c9.o board-valente_wx_c9-re
 obj-$(CONFIG_MACH_VALENTE_WX_C9) += board-valente_wx_c9-keypad.o
 obj-$(CONFIG_MACH_VALENTE_WX_C9) += htc_bdaddress.o
 obj-$(CONFIG_MACH_VALENTE_WX_C9) += htc_util.o
+
+obj-$(CONFIG_MACH_K2_U) += board-k2_u.o board-k2_u-all.o board-k2_u-regulator.o board-k2_ul-audio.o
+obj-$(CONFIG_MACH_K2_U) += htc_bdaddress.o board-k2_u-rfkill.o htc_sleep_clk.o htc_util.o board-k2-camera.o
+#obj-$(CONFIG_MACH_K2_U) += htc_acoustic.o
+obj-$(CONFIG_MACH_K2_U) += board-k2_u-keypad.o
+obj-$(CONFIG_MACH_K2_U) += board-k2_u-mmc.o board-k2_u-wifi.o htc_wifi_nvs.o
+
+
+
+
+
+
+
+
+obj-$(CONFIG_MACH_K2_CL) += board-k2_cl.o board-k2_cl-all.o board-k2_cl-regulator.o board-k2_cl-audio.o
+obj-$(CONFIG_MACH_K2_CL) += htc_bdaddress.o board-k2_cl-rfkill.o htc_sleep_clk.o htc_util.o board-k2-camera.o
+#obj-$(CONFIG_MACH_K2_CL) += htc_acoustic.o
+obj-$(CONFIG_MACH_K2_CL) += board-k2_cl-keypad.o
+obj-$(CONFIG_MACH_K2_CL) += board-k2_cl-mmc.o board-k2_cl-wifi.o htc_wifi_nvs.o
+
+obj-$(CONFIG_MACH_K2_PLC_CL) += board-k2_plc_cl.o board-k2_plc_cl-all.o board-k2_plc_cl-regulator.o board-k2_plc_cl-audio.o
+obj-$(CONFIG_MACH_K2_PLC_CL) += htc_bdaddress.o board-k2_plc_cl-rfkill.o htc_sleep_clk.o htc_util.o board-k2-camera.o
+#obj-$(CONFIG_MACH_K2_PLC_CL) += htc_acoustic.o
+obj-$(CONFIG_MACH_K2_PLC_CL) += board-k2_plc_cl-keypad.o
+obj-$(CONFIG_MACH_K2_PLC_CL) += board-k2_plc_cl-mmc.o board-k2_plc_cl-wifi.o htc_wifi_nvs.o
+
+obj-$(CONFIG_MACH_K2_UL) += board-k2_ul.o board-k2_ul-all.o board-k2_ul-regulator.o board-k2_ul-audio.o
+obj-$(CONFIG_MACH_K2_UL) += htc_bdaddress.o board-k2_ul-rfkill.o htc_sleep_clk.o htc_util.o board-k2-camera.o
+#obj-$(CONFIG_MACH_K2_UL) += htc_acoustic.o
+obj-$(CONFIG_MACH_K2_UL) += board-k2_ul-keypad.o
+obj-$(CONFIG_MACH_K2_UL) += board-k2_ul-mmc.o board-k2_ul-wifi.o htc_wifi_nvs.o
 
 obj-$(CONFIG_MACH_OPERAUL) += board-operaul.o board-operaul-all.o board-operaul-regulator.o board-operaul-audio.o
 obj-$(CONFIG_MACH_OPERAUL) += htc_bdaddress.o board-operaul-rfkill.o htc_sleep_clk.o htc_util.o board-operaul-camera.o
