--- a/arch/arm/configs/m7wlj_defconfig
+++ b/arch/arm/configs/m7wlj_defconfig
@@ -1777,7 +1777,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
 # CONFIG_TOUCHSCREEN_MAX11871 is not set
 # CONFIG_TOUCHSCREEN_MAX1187X is not set
-# CONFIG_TOUCHSCREEN_HIMAX is not set
+CONFIG_TOUCHSCREEN_HIMAX=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
