--- a/arch/arm/configs/m7wlj_defconfig
+++ b/arch/arm/configs/m7wlj_defconfig
@@ -52,7 +52,9 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
+CONFIG_ZRAM=y
+CONFIG_ZSMALLOC=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
