--- a/arch/arm/configs/m7wlj_defconfig
+++ b/arch/arm/configs/m7wlj_defconfig
@@ -3855,3 +3855,5 @@ CONFIG_DQL=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
+### Tutonline
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
