--- a/arch/arm/configs/m7wlj_defconfig
+++ b/arch/arm/configs/m7wlj_defconfig
@@ -3857,3 +3857,4 @@ CONFIG_NLATTR=y
 # CONFIG_CORDIC is not set
 ### Tutonline
 CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
+CONFIG_FORCE_FAST_CHARGE=y
