--- a/arch/arm/configs/m7wlj_defconfig
+++ b/arch/arm/configs/m7wlj_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Tutonline-HTL22-V1.2"
+CONFIG_LOCALVERSION="-Tutonline-HTL22-V1.3"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -3858,3 +3858,4 @@ CONFIG_NLATTR=y
 ### Tutonline
 CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_MSM_SLEEPER=y
