--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -645,6 +645,7 @@ CONFIG_USB_ANDROID_ECM=y
 CONFIG_PM_RUNTIME=y
 CONFIG_LEDS_LP5521_HTC=y
 CONFIG_DEFAULT_ROW=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_IR_SONY_DECODER=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
@@ -783,7 +784,7 @@ CONFIG_MSM_CAMERA=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
 CONFIG_MSM_SMD0_WQ=y
-CONFIG_LOCALVERSION="-Tutonline-HTL22-V1.2"
+CONFIG_LOCALVERSION="-Tutonline-HTL22-V1.3"
 CONFIG_RADIO_ADAPTERS=y
 CONFIG_TI201_ACT=y
 CONFIG_KERNEL_PMEM_EBI_REGION=y
@@ -1026,6 +1027,7 @@ CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_AMP_TPA6185=y
 CONFIG_COMPACTION=y
+CONFIG_MSM_SLEEPER=y
 CONFIG_PROC_FS=y
 CONFIG_VIDEOBUF2_VMALLOC=y
 CONFIG_RC_MAP=y
